--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,19 +1,49 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
-
 trigger:
 - master
 
 pool:
-  vmImage: 'ubuntu-latest'
+  vmImage: 'Ubuntu-16.04'
+
+variables:
+  imageName: 'tiledb/tiledb-geospatial'
 
 steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
+- task: Docker@2
+  displayName: Build an image
+  inputs:
+    repository: $(imageName)
+    command: build
+    Dockerfile: docker/Dockerfile
+    tags: |
+      $(build.SourceBranchName)
+- task: Docker@2
+  displayName: Build an image
+  inputs:
+    repository: $(imageName)
+    command: build
+    Dockerfile: docker/Dockerfile
+    tags: |
+      latest
+  condition: and(succeeded(), startsWith(variables['Build.SourceBranch'], 'refs/tags'))
 
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+- task: Docker@2
+  displayName: Push image
+  inputs:
+    containerRegistry: |
+      dockerHub
+    repository: $(imageName)
+    command: push
+    tags: |
+      $(build.SourceBranchName)
+  condition: and(succeeded(), or(eq(variables['Build.SourceBranchName'], 'master'), startsWith(variables['Build.SourceBranch'], 'refs/tags')))
+
+- task: Docker@2
+  displayName: Push image
+  inputs:
+    containerRegistry: |
+      dockerHub
+    repository: $(imageName)
+    command: push
+    tags: |
+      latest
+  condition: and(succeeded(), startsWith(variables['Build.SourceBranch'], 'refs/tags'))
