--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,5 +1,10 @@
 trigger:
-- master
+  tags:
+    include:
+      - '*'
+  branches:
+    include:
+    - master
 
 variables:
   imageName: 'tiledb/tiledb-geospatial'
