upgrade to tiledb 2.6.3

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:18.04
+FROM ubuntu:20.04
 LABEL maintainer="support@tiledb.io"
 
 ENV DEBIAN_FRONTEND=noninteractive
@@ -14,7 +14,6 @@ RUN apt-get update && apt-get install -y \
   gcc \
   g++ \
   build-essential \
-  cmake \
   sqlite \
   libsqlite3-dev \
   libxml2-dev \
@@ -26,15 +25,24 @@ RUN apt-get update && apt-get install -y \
   python3-pip \
   git \
   wget \
+  swig \
+  zip \
   && rm -rf /var/lib/apt/lists/*
 
-# Install tiledb using 2.2.4 release
-RUN mkdir -p /build_deps && cd /build_deps \
-  && git clone https://github.com/TileDB-Inc/TileDB.git -b 2.2.4 && cd TileDB \
-  && mkdir -p build && cd build \
-  && cmake -DTILEDB_VERBOSE=ON -DTILEDB_S3=ON -DTILEDB_SERIALIZATION=ON -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/usr/local .. \
-  && make -j$(nproc) \
-  && make -C tiledb install
+# Install latest cmake
+RUN mkdir /build_deps && cd /build_deps \
+  && wget --no-check-certificate https://cmake.org/files/LatestRelease/cmake-3.23.0-linux-x86_64.sh -O cmake-3.23.0-linux-x86_64.sh \
+  && mkdir -p /opt/cmake \
+  && sh cmake-3.23.0-linux-x86_64.sh --prefix=/opt/cmake --skip-license \
+  && ln -s /opt/cmake/bin/cmake /usr/local/bin/cmake \
+  && cmake --version
+
+# Install tiledb using 2.6.3 release
+RUN cd /build_deps \
+  && git clone https://github.com/TileDB-Inc/TileDB.git -b 2.6.3 && cd TileDB \
+  && mkdir build && cd build \
+  && ../bootstrap --prefix=/usr/local --enable-s3 --enable-serialization \
+  && make && make -C tiledb install
 
 # Install curl after building tiledb
 RUN apt-get update && apt-get install -y \
@@ -45,7 +53,7 @@ RUN apt-get update && apt-get install -y \
 # Install OpenJPEG
 RUN cd /build_deps \
   && git clone https://github.com/uclouvain/openjpeg.git -b v2.2.0 && cd openjpeg \
-  && mkdir -p build && cd build \
+  && mkdir build && cd build \
   && cmake .. \
   && make -j$(nproc) \
   && make install
@@ -62,7 +70,7 @@ RUN cd /build_deps \
 # Install Proj
 RUN cd /build_deps \
   && git clone https://github.com/OSGeo/PROJ.git -b 6.2.1 && cd PROJ \
-  && mkdir -p build && cd build \
+  && mkdir build && cd build \
   && cmake .. \
   && make -j$(nproc) \
   && make install
@@ -72,23 +80,27 @@ RUN cd /build_deps \
   && wget --no-check-certificate https://download.osgeo.org/geotiff/libgeotiff/libgeotiff-1.5.1.tar.gz \
   && tar -zxf libgeotiff-1.5.1.tar.gz \
   && cd libgeotiff-1.5.1 \
-  && mkdir -p build && cd build \
+  && mkdir build && cd build \
   && cmake .. \
   && make \
   && make install
 
 # Install GDAL
-RUN cd /build_deps \
-  && git clone https://github.com/OSGeo/gdal.git && cd gdal/gdal \
-  && git checkout 72891ee01fa59150050310253575430198f270b4 \
-  && ./configure --with-crypto=no --with-curl=no --with-netcdf=yes \
+RUN wget -q https://github.com/OSGeo/gdal/archive/refs/tags/v3.5.0alpha1.zip \
+  && unzip -q v3.5.0alpha1.zip \
+  && cd gdal-3.5.0alpha1 \
+  && mkdir build \
+  && cd build \
+  && cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=$CONDA_DIR .. \
   && make -j$(nproc) \
-  && make install
+  && make install \
+  && cd /tmp \
+  && rm -rf gdal-3.5.0alpha1 v3.5.0alpha1.zip
 
 ## Install TileDB-Py
 RUN cd /build_deps \
   && pip3 install numpy \
-  && git clone https://github.com/TileDB-Inc/TileDB-Py.git -b 0.8.4 \
+  && git clone https://github.com/TileDB-Inc/TileDB-Py.git -b 0.13.1 \
   && cd TileDB-Py && python3 setup.py install
 
 ## Install XArray
@@ -103,17 +115,21 @@ RUN cd /build_deps \
   && pip3 install dask distributed --upgrade \
   && pip3 install dask-image
 
-# Install Rasterio
-RUN cd /build_deps && pip3 install cython
+# Install PDAL
 RUN cd /build_deps \
-  && git clone https://github.com/mapbox/rasterio.git && cd rasterio \
-  && git checkout 74bd625dfd984ca090a1ee02f4fc1940b11d7ce8 \
-  && python3 setup.py install
+  && git clone https://github.com/TileDB-Inc/PDAL.git && cd PDAL \
+  && git checkout nb/tiledb_2_x \
+  && mkdir build && cd build \
+  && cmake .. -G "Unix Makefiles" .. -DBUILD_PLUGIN_TILEDB=ON \
+  && make \
+  && make install
 
-# Install Fiona
-RUN cd /build_deps \
-  && git clone https://github.com/Toblerity/Fiona.git && cd Fiona \
-  && python3 setup.py install
+# Install Rasterio, fiona, shapely and pdal client
+RUN cd /build_deps && pip3 install cython \
+  && pip3 install --no-cache-dir rasterio --no-binary=rasterio \
+  fiona \
+  shapely \
+  pdal~=3.0
 
 # Install TileDB-SAR
 RUN cd /build_deps \
@@ -125,38 +141,10 @@ RUN cd /build_deps \
 RUN cd /build_deps \
   && git clone https://github.com/mapserver/mapserver.git && cd mapserver \
   && git checkout 0fcc810f0b559c800f950db78a79fa6574799f23 \
-  && mkdir -p build && cd build \
+  && mkdir build && cd build \
   && cmake .. -DWITH_GIF=OFF -DWITH_HARFBUZZ=OFF -DWITH_PROTOBUFC=OFF -DWITH_FRIBIDI=OFF -DWITH_POSTGIS=OFF -DWITH_GEOS=OFF -DWITH_FCGI=OFF -DWITH_CAIRO=OFF \
   && make \
   && make install
-
-# Install LasZIP
-RUN cd /build_deps \
-  && wget https://github.com/LASzip/LASzip/releases/download/3.4.1/laszip-src-3.4.1.tar.gz \
-  && tar -zxf laszip-src-3.4.1.tar.gz \
-  && cd laszip-src-3.4.1 \
-  && mkdir -p build && cd build \
-  && cmake .. \
-  && make \
-  && make install
-
-# Install PDAL
-RUN cd /build_deps \
-  && git clone https://github.com/PDAL/PDAL.git && cd PDAL \
-  && git checkout 2.1-maintenance \
-  && mkdir -p build && cd build \
-  && cmake .. -G "Unix Makefiles" .. -DBUILD_PLUGIN_TILEDB=ON -DWITH_LASZIP=ON \
-  && make \
-  && make install
-
-# Install PDAL Python
-RUN pip3 install packaging \
-  && pip3 install cmake \
-  && pip3 install scikit-build \
-  && git clone https://github.com/PDAL/python pdalextension \
-  && cd pdalextension \
-  && python3 setup.py build \
-  && python3 setup.py install
 
 # Clean up
 RUN cd /tmp && rm -r /build_deps
